src/view/browser/render/snapshots/nifi_lens__view__browser__render__version_control_modal__tests__vc_modal_narrow_60x20.snap
---
source: src/view/browser/render/version_control_modal.rs
assertion_line: 633
expression: "format!(\"{}\", term.backend())"
---
"┌ ingest · version control ────────────────────────────────┐"
"│┌ Identity ──────────────────────────────────────────────┐│"
"││registry  ops-registry / bucket=ops / branch=main       ││"
"││flow      diff-pipeline · flow_id=4f3a-aaa… · v3        ││"
"││state     STALE                                         ││"
"││why       Local changes have been made and a newer versi││"
"│└────────────────────────────────────────────────────────┘│"
"│                         loading…                         │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│loading…                                                  │"
"│[Esc] close · [/] find · [c] copy · [e] bundle diffs · [r]│"
"└──────────────────────────────────────────────────────────┘"
