src/view/browser/render/snapshots/nifi_lens__view__browser__render__version_control_modal__tests__vc_modal_search_highlights.snap
---
source: src/view/browser/render/version_control_modal.rs
assertion_line: 583
expression: "format!(\"{}\", term.backend())"
---
"┌ ingest · version control ────────────────────────────────────────────────────────────────────────┐"
"│┌ Identity ──────────────────────────────────────────────────────────────────────────────────────┐│"
"││registry  ops-registry / bucket=ops / branch=main                                               ││"
"││flow      diff-pipeline · flow_id=4f3a-aaa… · v3                                                ││"
"││state     MODIFIED                                                                              ││"
"││why       Local changes have been made and a newer version exists                               ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│─ Processor · X · abcdabcd ─                                                                      │"
"│PROPERTY_CHANGED   Record Reader changed                                                          │"
"│PROPERTY_CHANGED   Record Writer changed                                                          │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│2 differences across 1 components · bundle diffs hidden                                           │"
"│[Esc] close · [/] find · [c] copy · [e] bundle diffs · [r] refresh                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
